<resources>
    <string name="app_name">Saúde em Dia</string>

    <string name="str_home">Página Inicial</string>
    <string name="str_controle">Pessoas Cadastradas</string>
    <string name="str_cadastro">Cadastro</string>
    <string name="str_sugestoes">Dicas de Saúde</string>
    <string name="str_manutencao">Atualizar Cadastro</string>
    <string name="tela_perfil">Perfil</string>



</resources>